Fixed navigation visibility issue

--- a/css/main.comp.css
+++ b/css/main.comp.css
@@ -859,7 +859,8 @@ body {
   right: 6.5rem;
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
-  transition: transform 0.8s cubic-bezier(0.86, 1, 0.07, 1); }
+  -webkit-transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   @media only screen and (max-width: 56.25em) {
     .navigation__background {
       top: 4.5rem;
@@ -878,7 +879,7 @@ body {
   z-index: 1500;
   opacity: 0;
   width: 0;
-  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+  transition: all .8s; }
 
 .navigation__list {
   position: absolute;
@@ -887,7 +888,8 @@ body {
   transform: translate(-50%, -50%);
   list-style: none;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  visibility: hidden; }
 
 .navigation__item {
   margin: 1rem; }
@@ -917,7 +919,11 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
-  width: 100%; }
+  width: 100%;
+  left: 0; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__list {
+  visibility: visible; }
 
 .navigation__icon {
   position: relative;
