--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -37,7 +37,8 @@
         right: 6.5rem;
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: 1000;
-        transition: transform .8s cubic-bezier(0.86, 1, 0.07, 1);
+        -webkit-transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+        transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
         @include respond(tab-port) {
             top: 4.5rem;
@@ -55,11 +56,11 @@
         width: 100%;
         position: fixed;
         top: 0;
-        left: 0;
+        left: -15rem;
         z-index: 1500;
         opacity: 0;
         width: 0;
-        transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        transition: all .8s;
     }
 
     &__list {
@@ -70,6 +71,7 @@
         list-style: none;
         width: 100%;
         text-align: center;
+        visibility: hidden;
     }
 
     &__item {
@@ -113,6 +115,11 @@
     &__checkbox:checked ~ &__nav {
         opacity: 1;
         width: 100%;
+        left: 0;
+    }
+
+    &__checkbox:checked ~ &__nav &__list {
+        visibility: visible;
     }
 
     // Icon
